Version CVS HEAD (?)

  * src/gig.cpp, src/gig.h:
    - fixed the GetVelocityCutoff function, it wasn't always using the
      VCFVelocityScale parameter when no cutoff controller was defined

Version 2.0.2 (15 Aug 2005)

  * packaging changes:
    - require automake (>= 1.5) for 'make -f Makefile.cvs'
      (mandatory for 'dist-bzip2' automake option)

  * src/gig.cpp, src/gig.h:
    - support for gig v3 multi-file format (.gig, .gx01, .gx02, ...),
      the extension files are read automatically when the samples are
      loaded
    - fixed the 24 bit decompression, the result should now be exact
      instead of an approximation
    - added VCFCutoffControllerInvert parameter and GetVelocityCutoff
      function to DimensionRegion

  * src/DLS.cpp, src/DLS.h:
    - the upper bits of the pool table indices are read (used as
      extension file numbers for gig v3)

  * src/RIFF.cpp, src/RIFF.h:
    - the file name is remembered in the RIFF::File object

Version 2.0.1 (12 Jun 2005)

  * packaging changes:
    - include debian/ directory on 'make dist'
    - create a bzip2 tarball on 'make dist'

  * src/gigextract.cpp:
    - show also version of libsndfile or build version of libaudiofile when
      using the -v switch
    - fixed mutual link dependency to libsndfile / libaudiofile

  * src/gig.cpp, src/gig.h:
    - added DimensionRegion::GetVelocityRelease function

Version 2.0.0 (9 May 2005)

  * packaging changes:
    - fixed conditional linkage of either libsndfile or libaudiofile
      (if none of the two exist, configure script will abort)
    - man pages are now auto generated with the correct libgig version

  * src/gig.cpp, src/gig.h:
    - experimental support for Gigasampler v3 format;
      64 bit file offsets are truncated to 32 bit, 24 bit samples are
      truncated to 16 bit, up to 8 dimensions are read, additional
      articulation informations are ignored at the moment
      (patch by Andreas Persson)